# ANN-handwritten-digit-recognizer

./: README.md  main.py  pyproject.toml
